--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         font-family: monospace;
         font-size: 2.5rem;
         font-weight: bold;
+        margin: 30px;
       }
       .section {
         border: 3px;
