emotes + npc character development, still in progress

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </style>
   </head>
   <body>
-    <h1>Midterm Project ("Let's Grow")</h1>
+    <h1>Final Project ("Let's Grow")</h1>
     <h1>by Toné Nanna and Yoshiaki Kato</h1>
     
     <br>
