changes to index

--- a/index.html
+++ b/index.html
@@ -80,18 +80,48 @@
       <div>
         <div class="section">
           <p>Story</p>
-          <p>You play as a farmer who gained their dying grandfather’s farmland to work for themself to grow crops and gather produce from animals. You are given a minimal amount of seeds from your grandfather and you will have to grow as a farmer to gain more seeds and more farmland. (We plan to expand the game to have a shop where you can buy different types of seeds and farming animals, and also include a restaurant/cooking component as well).
+          <p>You play as a farmer who gained their dying grandfather’s farmland to work for themself to grow crops and gather produce from animals. You are given a minimal amount of seeds from your grandfather and you will have to grow as a farmer to gain more seeds and more farmland. You also run a restaurant where you can serve dishes using the crops harvested.</p>
         </div>
         <div class="section">
           <p> Instructions</p>
           <p>Player movement: WASD<br/>
-            Interact button: ‘ENTER’ (note: you can interact with gates, farmland, and animals)<br/>
-            Inventory: Number buttons 1-8</p>  
+            Interact button: ‘ENTER’ (note: you can interact with gates, farmland, animals, NPCs, & doors)<br/>
+            Inventory: Number buttons 1-8<br/>
+            Store: Number buttons 1-3<br/>
+            Kitchen Inventory: Number buttons 1-5
+          </p>  
         </div>
 
         <div class="section">
           <p>Details:</p>
-          <p>You can move the player using WASD keys, moving up, left, down and right respectively. To enter the farm plots, you must click “enter” when your player is facing and touching the gate which changes the tile to an open gate that allows the player to pass. When you are in the farm plots you can press “enter” when your player is facing and touching a dirt tile to enter the player’s inventory. In the player’s inventory, you will see the three seeds the player has access to: corn, wheat, and tomatoes, as well as milk and eggs which are collected from the animals. You select what inventory object you want to use by pressing a number key 1-8. With a seed selected, you can plant it by clicking the mouse, which will lead you back to the farm world with the crop planted in front of you. This action will remove 1 seed from your inventory. To harvest crops, you press “enter” which will add 1 crop to your inventory. This can be seen in the bar at the bottom of the screen. When you are done farming, you can leave through the gate, pressing “enter” to close it behind you. o interact with the animals, press “enter,” which will make them look towards your direction if you are facing it. Interacting with an adult cow will add one milk to your inventory, and the same is true for the adult chicken which will add one egg. The player can interact with the calf and chick within the pen, but you will get no milk or eggs from them. </p>
+          <p>You can move the player using WASD keys, moving up, left, down and right respectively.
+             To enter the farm plots, you must click “enter” when your player 
+            is facing and touching the gate which changes the tile to an open gate that allows the player to pass.<br/>
+            <br/>
+            Farming: <br/>
+            When you are in the farm plots you can press “enter” when your player is facing and touching 
+            a dirt tile to enter the player’s inventory. In the player’s inventory, you will see the three 
+            seeds the player has access to: corn, wheat, and tomatoes, as well as milk and eggs which are 
+            collected from the animals. You select what inventory object you want to use by pressing a number 
+            key 1-8. With a seed selected, you can plant it by clicking the mouse, which will lead you back 
+            to the farm world with the crop planted in front of you. This action will remove 1 seed from your
+             inventory. To harvest crops,  you press “enter” which will add 1 crop to your inventory. This can be 
+             seen in the bar at the bottom of the screen. When you are done farming, you can leave through the gate, 
+             pressing “enter” to close it behind you. <br/>
+             <br/>
+             Animals:<br/>
+            To interact with the animals, press “enter,” which will make them look towards your direction if 
+            you are facing it. Interacting with an adult cow will add one milk to your inventory, and the same 
+            is true for the adult chicken which will add one egg. The player can interact with the calf and chick
+             within the pen, but you will get no milk or eggs from them.<br/>
+             <br/>
+             Store:<br/>
+             When facing and touching the door to the store, press “enter” and the store interface will display. Select a 
+             number key 1-3, press “enter” and 1 item will be added to your inventory that is shown when planting crops.<br/>
+             <br/>
+             Restaurant:<br/>
+            ENTER IN RESTAURANT BLURB WHEN FINISHED!!!!
+          </p>
         </div>
       </div>
       
