--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div>
         <div class="section">
           <p>Story</p>
-          <p>You play as a farmer who gained their dying grandfather’s farmland to work for themself to grow crops and gather produce from animals. You are given a minimal amount of seeds from your grandfather and you will have to grow as a farmer to gain more seeds and more farmland. You also run a restaurant where you can serve dishes using the crops harvested.</p>
+          <p>You play as a farmer who gained their dying grandfather’s farmland to grow crops and gather produce from animals. You are given a minimal amount of seeds to start and will have to develop as a farmer to gain more seeds and more farmland. You also run a restaurant where you can serve dishes using the crops harvested. </p>
         </div>
         <div class="section">
           <p> Instructions</p>
