--- a/index.html
+++ b/index.html
@@ -120,7 +120,21 @@
              number key 1-3, press “enter” and 1 item will be added to your inventory that is shown when planting crops.<br/>
              <br/>
              Restaurant:<br/>
-             To enter the restaurant, press “enter” when facing the door. Once inside, you can interact with the recipe book by pressing “enter” and then clicking on the displayed arrows to look through them all. To close the recipe book press “esc”. Walk to pot and press “enter,” and you can select between ingredients to create the final recipe. For example, to create “bruschetta”, add 1 tomato and 1 wheat and then click the mouse to start cooking. To clear selection, such as if you selected the wrong ingredients, press “esc” and then press “enter” in front of pot. Once it is done press “enter” and the dish will be on top of the player’s head. You can press “enter” when in front of the customer to serve them the food. To exit the restaurant, go to door and press “enter”. 
+             To enter the restaurant, press “enter” when facing the door. Once inside, you can interact with the recipe book
+              by pressing “enter” and then clicking on the displayed arrows to look through them all. To close the recipe book press “esc”. 
+              Walk to pot and press “enter,” and you can select between ingredients to create the final recipe. For example, to create “bruschetta”, 
+              add 1 tomato and 1 wheat and then click the mouse to start cooking. To clear selection, such as if you selected the wrong ingredients, 
+              press “esc” and then press “enter” in front of pot. Once it is done press “enter” and the dish will be on top of the player’s head. 
+              You can press “enter” when in front of the customer to serve them the food. To exit the restaurant, go to door and press “enter”.<br/>
+              <br/>
+              NPC:<br/>
+              Villager NPC’s move from one location to another by using the A-star algorithm and the world grid. NPC’s are interactable,
+              where if the player presses “enter” in front of them they will stop to look at the player, before resuming their walking. 
+              The player can also stop NPC’s from moving by placing themself in front of them.<br/>
+              Customer NPC’s always spawn in the entrance of the restaurant and path to either table, 
+              and to either seat randomly. Occupied tables are kept track of so that no two customers sit in the same seat. 
+              The player can interact with them in the kitchen as well. The customer will ‘order’ after the are seated by displaying a speech bubble of the food that they want.
+
 
           </p>
         </div>
