--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="Overheadworld.js" type="text/javascript"></script> -->
     <style>
       body{
-        background-color: rgba(112,81,61,255);
+        background-color: #c07a30;
       }
       #start {
       position: relative;
@@ -60,7 +60,7 @@
         border: 3px;
         border-style: solid;
         border-color: darkgray;
-        background-color: rgb(50, 43, 17);
+        background-color: #a44200;
         margin-bottom: 20px;
       }
     </style>
